hphp/test/slow/pinit/pinit-recurse.php.expectf
__autoloading Y
object(X) (0) {
}

Fatal error: Class undefined: Y in %s/pinit-recurse.php on line 11
